--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,12 @@
 spring:
   application:
     name: lab-4-verb
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8010/eureka/
+  config:
+    import: optional:configserver:http://localhost:8001
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8010/eureka/
 
 words: ran,knew,had,saw,bought
 
